--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
                         <li class="nav-item"><a class="nav-link active" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="#projects">Project</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="projects.html" target="_blank">Project</a>
+                        </li>
                         <li class="nav-item"><a class="nav-link active" href="#">Contact</a></li>
                     </ul>
                 </div>
@@ -99,20 +100,16 @@
                     <div class="row mx-0">
                         <div class="col-md-6 col-sm-12 about__main ">
                             <h3 class="about__main-heading">Get to Know me!</h3>
-                            <p class="about__main-para">I'm a Frontend Web Developer building the Front-end of
-                                Websites
-                                and
-                                Web Applications that leads to the success of the overall product. Check out some of my
-                                work in the Projects section.</p>
+                            <p class="about__main-para">I'm a Frontend Web Developer building the Front-end of Websites and
+                                Web Applications that leads to the success of the overall product. Check out some of my work in the Projects section.</p>
 
-                            <p class="about__main-para mt-4">I'm open to Job opportunities where I can contribute, learn
-                                and
+                            <p class="about__main-para mt-4">I'm open to Job opportunities where I can contribute, learn and
                                 grow. If you have a good opportunity that matches my skills then don't hesitate to
                                 contact me.</p>
 
-                            <!-- <button class="button-1"><a href="#projects">Projects</a></button> -->
-                            <!-- <a href="#projects" class="button-1">Projects</a> -->
-                            <button class="button-1"><span><a href="#projects">Projects</a></span></button>
+                                
+
+                            <button class="button-1"><span><a href="projects.html" target="_blank">Projects</a></span></button>
                         </div>
 
                         <div class="col-md-6 col-sm-12 about__skills ">
@@ -133,137 +130,13 @@
 
             </div>
             <div class="custom-shape-01">
-                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                    preserveAspectRatio="none">
                     <path d="M598.97 114.72L0 0 0 120 1200 120 1200 0 598.97 114.72z" class="shape-fill"></path>
                 </svg>
             </div>
         </div>
     </section>
-
-
-
-    <!-- Section: 3 -->
-    <!-- <section class="section-three" id="projects">
-        <div class="container">
-            <div class="project-content">
-                <div class="project-content-heading">Projects</div>
-                <div class="row mx-0">
-
-                    <div class="col-md-4 mb-4">
-                        <div class="card">
-                            <div class="main-content">
-                                <div class="header">
-                                    <span>Article on</span>
-                                    <span>29-June-2023</span>
-                                </div>
-                                <p class="heading">Different ways to use CSS in React</p>
-                                <div class="categories">
-                                    <span>React</span>
-                                    <span>Css</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4 mb-4">
-                        <div class="card">
-                            <div class="main-content">
-                                <div class="header">
-                                    <span>Article on</span>
-                                    <span>29-June-2023</span>
-                                </div>
-                                <p class="heading">Different ways to use CSS in React</p>
-                                <div class="categories">
-                                    <span>React</span>
-                                    <span>Css</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4 mb-4">
-                        <div class="card">
-                            <div class="main-content">
-                                <div class="header">
-                                    <span>Article on</span>
-                                    <span>29-June-2023</span>
-                                </div>
-                                <p class="heading">Different ways to use CSS in React</p>
-                                <div class="categories">
-                                    <span>React</span>
-                                    <span>Css</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4 mb-4">
-                        <div class="card">
-                            <div class="main-content">
-                                <div class="header">
-                                    <span>Article on</span>
-                                    <span>29-June-2023</span>
-                                </div>
-                                <p class="heading">Different ways to use CSS in React</p>
-                                <div class="categories">
-                                    <span>React</span>
-                                    <span>Css</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4 mb-4">
-                        <div class="card">
-                            <div class="main-content">
-                                <div class="header">
-                                    <span>Article on</span>
-                                    <span>29-June-2023</span>
-                                </div>
-                                <p class="heading">Different ways to use CSS in React</p>
-                                <div class="categories">
-                                    <span>React</span>
-                                    <span>Css</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4 mb-4">
-                        <div class="card">
-                            <div class="main-content">
-                                <div class="header">
-                                    <span>Article on</span>
-                                    <span>29-June-2023</span>
-                                </div>
-                                <p class="heading">Different ways to use CSS in React</p>
-                                <div class="categories">
-                                    <span>React</span>
-                                    <span>Css</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-
-
-
-                </div>
-            </div>
-        </div>
-    </section> -->
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
