--- a/projects.html
+++ b/projects.html
@@ -32,12 +32,68 @@
         </nav>
     </header>
 
+ <!-- <div class="row mx-0">
+
+                    <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 my-4">
+                        <div class="card">
+                            <img src="img01.png" alt="image">
+                            <div class="card__content">
+                                <p class="card__title">Explore Pakistan</p>
+                                <p class="card__description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Temporibus, voluptatum!</p>
+                                <a href="https://curious-sprinkles-7ebd67.netlify.app/" target="_blank"><i
+                                        class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 my-4">
+                        <div class="card">
+                            <img src="img01.png" alt="image">
+                            <div class="card__content">
+                                <p class="card__title">Explore Pakistan</p>
+                                <p class="card__description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Temporibus, voluptatum!</p>
+                                <a href="https://curious-sprinkles-7ebd67.netlify.app/" target="_blank"><i
+                                        class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 my-4">
+                        <div class="card">
+                            <img src="img01.png" alt="image">
+                            <div class="card__content">
+                                <p class="card__title">Explore Pakistan</p>
+                                <p class="card__description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Temporibus, voluptatum!</p>
+                                <a href="https://curious-sprinkles-7ebd67.netlify.app/" target="_blank"><i
+                                        class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 my-4">
+                        <div class="card">
+                            <img src="img01.png" alt="image">
+                            <div class="card__content">
+                                <p class="card__title">Explore Pakistan</p>
+                                <p class="card__description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Temporibus, voluptatum!</p>
+                                <a href="https://curious-sprinkles-7ebd67.netlify.app/" target="_blank"><i
+                                        class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div> -->
 
 
-    <!-- Section: 3 -->
-    <section class="projects">
-        <div class="container">
-            <div class="position-absolute">
+
+
+
+
+
+                 <!-- <div class="position-absolute">
                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 500" width="100%" id="blobSvg"
                     style="opacity: 1;">
                     <path id="blob" fill="url(#gradient)" style="opacity: 1;">
@@ -52,76 +108,7 @@
                         </linearGradient>
                     </defs>
                 </svg>
-            </div>
-            <h1 class="projects-heading">Projects</h1>
-            <div class="projects-content">
-                <div class="row mx-0">
-
-                    <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 my-4">
-                        <div class="card">
-                            <img src="img01.png" alt="image">
-                            <div class="card__content">
-                                <p class="card__title">Explore Pakistan</p>
-                                <p class="card__description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                    Temporibus, voluptatum!</p>
-                                <a href="https://curious-sprinkles-7ebd67.netlify.app/" target="_blank"><i
-                                        class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 my-4">
-                        <div class="card">
-                            <img src="img01.png" alt="image">
-                            <div class="card__content">
-                                <p class="card__title">Explore Pakistan</p>
-                                <p class="card__description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                    Temporibus, voluptatum!</p>
-                                <a href="https://curious-sprinkles-7ebd67.netlify.app/" target="_blank"><i
-                                        class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 my-4">
-                        <div class="card">
-                            <img src="img01.png" alt="image">
-                            <div class="card__content">
-                                <p class="card__title">Explore Pakistan</p>
-                                <p class="card__description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                    Temporibus, voluptatum!</p>
-                                <a href="https://curious-sprinkles-7ebd67.netlify.app/" target="_blank"><i
-                                        class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 my-4">
-                        <div class="card">
-                            <img src="img01.png" alt="image">
-                            <div class="card__content">
-                                <p class="card__title">Explore Pakistan</p>
-                                <p class="card__description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                    Temporibus, voluptatum!</p>
-                                <a href="https://curious-sprinkles-7ebd67.netlify.app/" target="_blank"><i
-                                        class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
-    </section>
-
-
-
-
-
-
-
-
+            </div> -->
 
 
 
