--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
                         <li class="nav-item"><a class="nav-link active" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="projects.html" target="_blank">Project</a>
+                        <li class="nav-item"><a class="nav-link active" href="#projects">Project</a>
                         </li>
                         <li class="nav-item"><a class="nav-link active" href="#">Contact</a></li>
                     </ul>
@@ -100,16 +100,19 @@
                     <div class="row mx-0">
                         <div class="col-md-6 col-sm-12 about__main ">
                             <h3 class="about__main-heading">Get to Know me!</h3>
-                            <p class="about__main-para">I'm a Frontend Web Developer building the Front-end of Websites and
-                                Web Applications that leads to the success of the overall product. Check out some of my work in the Projects section.</p>
+                            <p class="about__main-para">I'm a Frontend Web Developer building the Front-end of Websites
+                                and
+                                Web Applications that leads to the success of the overall product. Check out some of my
+                                work in the Projects section.</p>
 
-                            <p class="about__main-para mt-4">I'm open to Job opportunities where I can contribute, learn and
+                            <p class="about__main-para mt-4">I'm open to Job opportunities where I can contribute, learn
+                                and
                                 grow. If you have a good opportunity that matches my skills then don't hesitate to
                                 contact me.</p>
 
 
 
-                            <button class="button-1"><span><a href="projects.html" target="_blank">Projects</a></span></button>
+                            <button class="button-1"><span><a href="#projects">Projects</a></span></button>
                         </div>
 
                         <div class="col-md-6 col-sm-12 about__skills ">
@@ -121,7 +124,6 @@
                                 <div class="skills-skill">JavaScript</div>
                                 <div class="skills-skill">React JS</div>
                             </div>
-                            <button class="button-1 button-12"><span><a href="#projects">Projects</a></span></button>
                         </div>
                     </div>
                 </div>
@@ -129,15 +131,98 @@
 
 
             </div>
-            <div class="custom-shape-01">
-                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
-                    preserveAspectRatio="none">
-                    <path d="M598.97 114.72L0 0 0 120 1200 120 1200 0 598.97 114.72z" class="shape-fill"></path>
-                </svg>
-            </div>
         </div>
     </section>
 
+
+
+
+
+    <!-- Section: 3 -->
+    <section class="projects" id="projects">
+        <div class="container">
+            <h1 class="projects-heading">Projects</h1>
+            <p class="projects-info">Here you will find some of the personal and clients projects that I created with
+                each project containing its own case study</p>
+
+            <div class="projects-content">
+                <div class="row mx-0">
+
+                    <!-- Project: 1 -->
+                    <!-- Laptop Img -->
+                    <div class="col-md-6 laptop-img">
+                        <div class="projects-image-01">
+                            <img src="image-02.png" alt="">
+                        </div>
+                    </div>
+
+                    <!-- Text Side -->
+                    <div class="col-md-6 laptop-detail">
+                        <h2 class="laptop-detail-heading">Project # 1</h2>
+                        <p class="laptop-detail-info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis
+                        </p>
+
+                        <button class="btn laptop-detail-btn mb-4"><a href="#">See Live</a></button>
+                    </div>
+                    <hr>
+                    <!-- Project: 2 -->
+                    <!-- Text Side -->
+                    <div class="col-md-6 laptop-detail">
+                        <h2 class="laptop-detail-heading">Project # 2</h2>
+                        <p class="laptop-detail-info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis
+                        </p>
+
+                        <button class="btn laptop-detail-btn mb-4"><a href="#">See Live</a></button>
+                    </div>
+
+                    <!-- Laptop Img -->
+                    <div class="col-md-6 laptop-img">
+                        <div class="projects-image-01">
+                            <img src="image-02.png" alt="">
+                        </div>
+                    </div>
+                    <hr>
+                    <!-- Project: 3 -->
+                    <!-- Laptop Img -->
+                    <div class="col-md-6 laptop-img">
+                        <div class="projects-image-01">
+                            <img src="image-02.png" alt="">
+                        </div>
+                    </div>
+
+                    <!-- Text Side -->
+                    <div class="col-md-6 laptop-detail">
+                        <h2 class="laptop-detail-heading">Project # 3</h2>
+                        <p class="laptop-detail-info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis
+                        </p>
+
+                        <button class="btn laptop-detail-btn mb-4"><a href="#">See Live</a></button>
+                    </div>
+                    <hr>
+
+                    <!-- Project: 4 -->
+                    <!-- Text Side -->
+                    <div class="col-md-6 laptop-detail">
+                        <h2 class="laptop-detail-heading">Project # 4</h2>
+                        <p class="laptop-detail-info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis
+                        </p>
+
+                        <button class="btn laptop-detail-btn mb-4"><a href="#">See Live</a></button>
+                    </div>
+
+                    <!-- Laptop Img -->
+                    <div class="col-md-6 laptop-img">
+                        <div class="projects-image-01">
+                            <img src="image-02.png" alt="">
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+
+    </section>
 
 
 
