--- a/index.html
+++ b/index.html
@@ -58,10 +58,12 @@
                         <a href="https://www.linkedin.com/in/suheer-zahid-a29b24241/?originalSubdomain=pk"
                             target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
 
-                        <i class="fa-brands fa-twitter"></i>
+                        <a href=" https://twitter.com/suheer_zahid18?t=Lnja0xeuTee9LwZBPU7ZZQ&s=08" target="_blank"><i
+                                class="fa-brands fa-twitter"></i></a>
 
                         <a href="https://www.instagram.com/suheer_mughal/" target="_blank"><i
                                 class="fa-brands fa-instagram"></i></a>
+
                     </div>
                 </div>
                 <!-- section-one-blob -->
@@ -133,7 +135,7 @@
         </div>
     </section>
 
-    
+
     <!-- Section: 3 -->
     <section class="projects" id="projects">
         <div class="container">
