--- a/index.html
+++ b/index.html
@@ -222,7 +222,34 @@
 
     </section>
 
+    <footer class="footer">
+        <div class="container footer-cont">
+            <div class="row mx-0">
+                <div class="col-md-8 footer-content">
+                    <h3 class="footer-content-heading">Suheer Zahid</h3>
+                    <p class="footer-content-info">A Frontend focused Web Developer building the Frontend of Websites
+                        and Web Applications that leads to the success of the overall product</p>
+                </div>
+                <div class="col-md-4">
+                    <h3>Social</h3>
+                    <div class="social-link">
+                        <a href="https://www.linkedin.com/in/suheer-zahid-a29b24241/?originalSubdomain=pk"
+                            target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
 
+                        <a href=" https://twitter.com/suheer_zahid18?t=Lnja0xeuTee9LwZBPU7ZZQ&s=08" target="_blank"><i
+                                class="fa-brands fa-twitter"></i></a>
+
+                        <a href="https://www.instagram.com/suheer_mughal/" target="_blank"><i
+                                class="fa-brands fa-instagram"></i></a>
+
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <h5 class="footer-lastLine">© Copyright 2023. Made by Suheer Zahid</h5>
+        </div>
+        
+    </footer>
 
 
 
