--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 
     <!-- Section: 2 -->
-    <section class="section-two" id="about">
+    <section class="section-two mt-4" id="about">
         <div class="container">
             <div class="about-content-head">
                 <h2 class="about-content-heading">About</h2>
@@ -150,33 +150,38 @@
                     <!-- Laptop Img -->
                     <div class="col-md-6 laptop-img">
                         <div class="projects-image-01">
-                            <img src="image-02.png" alt="">
+                            <img src="TextChanger.png" alt="">
                         </div>
                     </div>
 
                     <!-- Text Side -->
                     <div class="col-md-6 laptop-detail">
-                        <h2 class="laptop-detail-heading">Project # 1</h2>
-                        <p class="laptop-detail-info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis
-                        </p>
+                        <h2 class="laptop-detail-heading">Text Changer</h2>
+                        <p class="laptop-detail-info">Word Counter, Character Counter, Uppercase, Lowercase</p>
+                        <p class="laptop-detail-info">-React JS</p>
 
-                        <button class="btn laptop-detail-btn mb-4"><a href="#">See Live</a></button>
+
+                        <a class="btn laptop-detail-btn project1-btn"
+                            href="https://64e5afe90c71e528d9ef8824--tiny-sunflower-b760bf.netlify.app/"
+                            target="_blank">See Live</a>
                     </div>
                     <hr>
                     <!-- Project: 2 -->
                     <!-- Text Side -->
                     <div class="col-md-6 laptop-detail">
-                        <h2 class="laptop-detail-heading">Project # 2</h2>
-                        <p class="laptop-detail-info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis
-                        </p>
+                        <h2 class="laptop-detail-heading">Fuel Consumption Calculator</h2>
+                        <p class="laptop-detail-info">Use this fuel cost calculator to easily calculate fuel cost and
+                            the liters needed to complete a trip.</p>
 
-                        <button class="btn laptop-detail-btn mb-4"><a href="#">See Live</a></button>
+                        <a class="btn laptop-detail-btn project1-btn"
+                            href="https://suheerzahid.github.io/Fuel-Consumption-Calculator/" target="_blank">See
+                            Live</a>
                     </div>
 
                     <!-- Laptop Img -->
                     <div class="col-md-6 laptop-img">
                         <div class="projects-image-01">
-                            <img src="image-02.png" alt="">
+                            <img src="image-03.png" alt="">
                         </div>
                     </div>
                     <hr>
@@ -191,29 +196,11 @@
                     <!-- Text Side -->
                     <div class="col-md-6 laptop-detail">
                         <h2 class="laptop-detail-heading">Project # 3</h2>
-                        <p class="laptop-detail-info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis
-                        </p>
+                        <p class="laptop-detail-info">Coming Soon</p>
 
-                        <button class="btn laptop-detail-btn mb-4"><a href="#">See Live</a></button>
+                        <a class="btn laptop-detail-btn project1-btn" href="#" target="_blank">See Live</a>
                     </div>
                     <hr>
-
-                    <!-- Project: 4 -->
-                    <!-- Text Side -->
-                    <div class="col-md-6 laptop-detail">
-                        <h2 class="laptop-detail-heading">Project # 4</h2>
-                        <p class="laptop-detail-info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis
-                        </p>
-
-                        <button class="btn laptop-detail-btn mb-4"><a href="#">See Live</a></button>
-                    </div>
-
-                    <!-- Laptop Img -->
-                    <div class="col-md-6 laptop-img">
-                        <div class="projects-image-01">
-                            <img src="image-02.png" alt="">
-                        </div>
-                    </div>
 
                 </div>
             </div>
@@ -248,7 +235,7 @@
             <hr>
             <h5 class="footer-lastLine">© Copyright 2023. Made by Suheer Zahid</h5>
         </div>
-        
+
     </footer>
 
 
