--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 
 
-                            <button class="button-1"><span><a href="#projects">Projects</a></span></button>
+                            <a class="button-1" href="#projects"><span>Projects</span></a>
                         </div>
 
                         <div class="col-md-6 col-sm-12 about__skills ">
@@ -161,7 +161,7 @@
                         <p class="laptop-detail-info">-React JS</p>
 
 
-                        <a class="btn laptop-detail-btn project1-btn"
+                        <a class="btn laptop-detail-btn project-btn"
                             href="https://64e5afe90c71e528d9ef8824--tiny-sunflower-b760bf.netlify.app/"
                             target="_blank">See Live</a>
                     </div>
@@ -173,7 +173,7 @@
                         <p class="laptop-detail-info">Use this fuel cost calculator to easily calculate fuel cost and
                             the liters needed to complete a trip.</p>
 
-                        <a class="btn laptop-detail-btn project1-btn"
+                        <a class="btn laptop-detail-btn project-btn"
                             href="https://suheerzahid.github.io/Fuel-Consumption-Calculator/" target="_blank">See
                             Live</a>
                     </div>
@@ -198,7 +198,7 @@
                         <h2 class="laptop-detail-heading">Project # 3</h2>
                         <p class="laptop-detail-info">Coming Soon</p>
 
-                        <a class="btn laptop-detail-btn project1-btn" href="#" target="_blank">See Live</a>
+                        <a class="btn laptop-detail-btn project-btn" href="#" target="_blank">See Live</a>
                     </div>
                     <hr>
 
