--- a/index.html
+++ b/index.html
@@ -169,19 +169,19 @@
                     <!-- Project: 2 -->
                     <!-- Text Side -->
                     <div class="col-md-6 laptop-detail">
-                        <h2 class="laptop-detail-heading">Fuel Consumption Calculator</h2>
-                        <p class="laptop-detail-info">Use this fuel cost calculator to easily calculate fuel cost and
-                            the liters needed to complete a trip.</p>
+                        <h2 class="laptop-detail-heading">TWSTUDY</h2>
+                        <p class="laptop-detail-info">Best Online Platform
+                            For Learning.</p>
 
                         <a class="btn laptop-detail-btn project-btn"
-                            href="https://suheerzahid.github.io/Fuel-Consumption-Calculator/" target="_blank">See
+                            href="https://suheerzahid.github.io/TWSTUDY/index.html" target="_blank">See
                             Live</a>
                     </div>
 
                     <!-- Laptop Img -->
                     <div class="col-md-6 laptop-img">
                         <div class="projects-image-01">
-                            <img src="image-03.png" alt="">
+                            <img src="TWSTUDY.png" alt="">
                         </div>
                     </div>
                     <hr>
@@ -189,16 +189,17 @@
                     <!-- Laptop Img -->
                     <div class="col-md-6 laptop-img">
                         <div class="projects-image-01">
-                            <img src="image-02.png" alt="">
+                            <img src="SEOTooler.png" alt="">
                         </div>
                     </div>
 
                     <!-- Text Side -->
                     <div class="col-md-6 laptop-detail">
-                        <h2 class="laptop-detail-heading">Project # 3</h2>
-                        <p class="laptop-detail-info">Coming Soon</p>
+                        <h2 class="laptop-detail-heading">SEO Toolers</h2>
+                        <p class="laptop-detail-info">Here you can use your socail platforms in a better way.</p>
 
-                        <a class="btn laptop-detail-btn project-btn" href="#" target="_blank">See Live</a>
+                        <a class="btn laptop-detail-btn project-btn" href="https://suheerzahid.github.io/SEOToolers/"
+                            target="_blank">See Live</a>
                     </div>
                     <hr>
 
